--- a/config.yml
+++ b/config.yml
@@ -1,5 +1,5 @@
-db_host: localhost
-db_name: test_messanger
+db_host: database
+db_name: messanger
 db_password: '123'
 db_port: 5432
 db_username: wood
