--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,6 @@ tests/.pytest_cache
 server/__pycache__
 tests/__pycache__
 /tests/.coverage
+server/proto_api/__pycache__/
+server/request_hadlers/__pycache__/
+tests/proto_api/__pycache__/
