the test files have been restructured

--- a/.gitignore
+++ b/.gitignore
@@ -10,3 +10,4 @@ server/proto_api/__pycache__/
 server/request_hadlers/__pycache__/
 tests/proto_api/__pycache__/
 .coverage
+tests/src/__pycache__/
